<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_add_room">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.chatapp.ui.addRoom.AddRoomViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{()->vm.onOutsideClick()}"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".85">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/new_room_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_black"
                    android:gravity="center"
                    android:text="@string/create_new_room"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/room_imv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/room"
                    app:layout_constraintEnd_toEndOf="@id/new_room_tv"
                    app:layout_constraintStart_toStartOf="@id/new_room_tv"
                    app:layout_constraintTop_toBottomOf="@id/new_room_tv" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/room_name_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/room_name"
                    app:Error="@{vm.roomNameError}"
                    app:layout_constraintTop_toBottomOf="@id/room_imv">


                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/room_name_edt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:padding="8dp"
                        android:text="@={vm.roomName}"
                        android:textSize="16sp"
                        app:clearFocusOnCondition="@{vm.shouldClearFocus}"
                        app:onFocusChange="@{vm::onRoomNameFocusChange}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/categories_til"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:drawSelectorOnTop="true"
                    android:hint="@string/room_category"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxStrokeColor="@color/blue"
                    app:layout_constraintTop_toBottomOf="@id/room_name_til"
                    app:startIconDrawable="@drawable/ic_category">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTV_categories"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:ems="10"
                        android:fontFamily="@font/poppins_medium"
                        android:inputType="none"
                        android:padding="8dp"
                        android:text="Sports"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/room_desc_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/room_description"
                    app:layout_constraintTop_toBottomOf="@id/categories_til">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/room_desc_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start"
                        android:lines="5"
                        android:padding="8dp"
                        android:text="@={vm.roomDescription}"
                        android:textSize="16sp"
                        app:clearFocusOnCondition="@{vm.shouldClearFocus}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@id/room_desc_til">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/create_room_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_bg"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:onClick="@{()->vm.createRoom()}"
                        android:text="@string/create"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ProgressBar
                        android:id="@+id/progress_circular"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:indeterminateTint="@color/white"
                        android:visibility="@{vm.isLoading?View.VISIBLE:View.GONE}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>